[*] fix messy z-index on dropdown

--- a/src/sharedComponents/DataDecode/dataDecode.scss
+++ b/src/sharedComponents/DataDecode/dataDecode.scss
@@ -3,7 +3,6 @@
     right: 0.313rem;
     top: 0.313rem;
     pointer-events: none;
-    z-index: 1;
     .btn-pill {
       background-color: $card-bg;
     }
